--- a/ML_Programs.ipynb
+++ b/ML_Programs.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMUtw3AWfXyC92MJAQdn3Xr",
+      "authorship_tag": "ABX9TyMM+NW72+QKW5vxHidvs9+y",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,7 +30,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "1\tWAP in Python to make a list of name , Marks & plot in Bar, scatterplot & plot\n"
+        "1.\tWAP in Python to make a list of name , Marks & plot in Bar, scatterplot & plot\n"
       ],
       "metadata": {
         "id": "p1O_CzKan-RJ"
@@ -111,7 +111,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "2\tTake a csv file( Iris Data, Titanic Data, Cancer data and do the basic EDA Operation"
+        "2.\tTake a csv file( Iris Data, Titanic Data, Cancer data and do the basic EDA Operation"
       ],
       "metadata": {
         "id": "LUjRa2x1oN8M"
@@ -142,7 +142,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "3\tTake a set of Data in List & perform Normalization using Standard Scaler\n"
+        "3.\tTake a set of Data in List & perform Normalization using Standard Scaler\n"
       ],
       "metadata": {
         "id": "Vy61EVugoXt6"
@@ -187,6 +187,66 @@
             " [ 0.        ]\n",
             " [ 0.70710678]\n",
             " [ 1.41421356]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "4.\n",
+        "Wap in Python to demonstrate a comparative study of various ML Models such as SVM, KNN,"
+      ],
+      "metadata": {
+        "id": "ZTnffxayp4hO"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.model_selection import train_test_split\n",
+        "from sklearn.svm import SVC\n",
+        "from sklearn.neighbors import KNeighborsClassifier\n",
+        "from sklearn.metrics import accuracy_score\n",
+        "\n",
+        "# Load the iris dataset\n",
+        "from sklearn.datasets import load_iris\n",
+        "iris = load_iris()\n",
+        "\n",
+        "# Split data into training and testing sets\n",
+        "X_train, X_test, y_train, y_test = train_test_split(iris.data, iris.target, test_size=0.3)\n",
+        "\n",
+        "# SVM model\n",
+        "svm_model = SVC()\n",
+        "svm_model.fit(X_train, y_train)\n",
+        "svm_predictions = svm_model.predict(X_test)\n",
+        "svm_accuracy = accuracy_score(y_test, svm_predictions)\n",
+        "\n",
+        "# KNN model\n",
+        "knn_model = KNeighborsClassifier()\n",
+        "knn_model.fit(X_train, y_train)\n",
+        "knn_predictions = knn_model.predict(X_test)\n",
+        "knn_accuracy = accuracy_score(y_test, knn_predictions)\n",
+        "\n",
+        "# Print the accuracies\n",
+        "print(\"SVM Accuracy:\", svm_accuracy)\n",
+        "print(\"KNN Accuracy:\", knn_accuracy)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Zsnt61R2p8lI",
+        "outputId": "d3d68188-32e8-4171-e950-42e4b035d8fd"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "SVM Accuracy: 1.0\n",
+            "KNN Accuracy: 0.9555555555555556\n"
           ]
         }
       ]
