--- a/ML_Programs.ipynb
+++ b/ML_Programs.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMM+NW72+QKW5vxHidvs9+y",
+      "authorship_tag": "ABX9TyNjhesqitSgJ75Bo5Kn6HOZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -247,6 +247,352 @@
           "text": [
             "SVM Accuracy: 1.0\n",
             "KNN Accuracy: 0.9555555555555556\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "5. WAP to demonstrate the creation of Confusion Matrix."
+      ],
+      "metadata": {
+        "id": "jjnI49a2th5c"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.metrics import confusion_matrix\n",
+        "\n",
+        "# Assuming you have y_true (true labels) and y_pred (predicted labels)\n",
+        "# from a previous model (e.g., SVM or KNN)\n",
+        "# Replace 'svm_predictions' with 'knn_predictions' if you want to evaluate the KNN model\n",
+        "y_true = y_test  # True labels from your test set\n",
+        "y_pred = svm_predictions # Predicted labels from your SVM model\n",
+        "\n",
+        "\n",
+        "# Create the confusion matrix\n",
+        "cm = confusion_matrix(y_true, y_pred)\n",
+        "\n",
+        "# Print the confusion matrix\n",
+        "print(cm)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "l6VxGSupt2eR",
+        "outputId": "dcce2e65-815a-4394-ed12-886c0da27f79"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[12  0  0]\n",
+            " [ 0 18  0]\n",
+            " [ 0  0 15]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "6. Wap in Python to demonstarte the usage of co-relation Matrix."
+      ],
+      "metadata": {
+        "id": "6fKeMVgPt4t1"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import pandas as pd\n",
+        "\n",
+        "# Assuming you have data as a list:\n",
+        "data_list = [1, 2, 3, 4, 5]\n",
+        "\n",
+        "# Convert the list to a Pandas Series or DataFrame\n",
+        "# A Series is sufficient for a single variable correlation, but a DataFrame is needed for multiple variables\n",
+        "data = pd.DataFrame({'values': data_list}) # Creating a DataFrame with one column named 'values'\n",
+        "\n",
+        "# Now you can calculate the correlation (although it doesn't make much sense for a single variable)\n",
+        "correlation_matrix = data.corr()\n",
+        "\n",
+        "# Print the correlation matrix\n",
+        "print(correlation_matrix)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "usVni_EFuMua",
+        "outputId": "0d331c2e-e20a-44d5-86cb-c2887c85f1fb"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "        values\n",
+            "values     1.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "7. Wap in Python to demonstarte the usage of MacCulloch-Pitts Neuron model."
+      ],
+      "metadata": {
+        "id": "f44Q_y4WuPkd"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "\n",
+        "def mcculloch_pitts(inputs, weights, threshold):\n",
+        "  \"\"\"\n",
+        "  Implements the McCulloch-Pitts neuron model.\n",
+        "\n",
+        "  Args:\n",
+        "    inputs: A list of input values (0 or 1).\n",
+        "    weights: A list of weights"
+      ],
+      "metadata": {
+        "id": "3OSsq22euciD"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "8. Write a Program to demonstrate the usage of perceptron network."
+      ],
+      "metadata": {
+        "id": "RqIBt_pEudXa"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "\n",
+        "class Perceptron:\n",
+        "    def __init__(self, learning_rate=0.1, epochs=100):\n",
+        "        self.learning_rate = learning_rate\n",
+        "        self.epochs = epochs\n",
+        "        self.weights = None\n",
+        "        self.bias = None\n",
+        "\n",
+        "    def fit(self, X, y):\n",
+        "        n_samples, n_features = X.shape\n",
+        "        self.weights = np.zeros(n_features)\n",
+        "        self.bias = 0\n",
+        "\n",
+        "        for _ in range(self.epochs):\n",
+        "            for i in range(n_samples):\n",
+        "                linear_output = np.dot(X[i], self.weights) + self.bias\n",
+        "                y_predicted = self.activation_function(linear_output)\n",
+        "\n",
+        "                update = self.learning_rate * (y[i] - y_predicted)\n",
+        "                self.weights += update * X[i]\n",
+        "                self.bias += update\n",
+        "\n",
+        "    def predict(self, X):\n",
+        "        linear_output = np.dot(X, self.weights) + self.bias\n",
+        "        y_predicted = self.activation_function(linear_output)\n",
+        "        return y_predicted\n",
+        "\n",
+        "    def activation_function(self, x):\n",
+        "        return np.where(x >= 0, 1, 0)\n",
+        "\n",
+        "# Sample data\n",
+        "X = np.array([[0, 0], [0, 1], [1, 0], [1, 1]])\n",
+        "y = np.array([0, 0, 0, 1])  # AND gate logic\n",
+        "\n",
+        "# Create and train the perceptron\n",
+        "perceptron = Perceptron()\n",
+        "perceptron.fit(X, y)\n",
+        "\n",
+        "# Make predictions\n",
+        "predictions = perceptron.predict(X)\n",
+        "print(\"Predictions:\", predictions)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "z5V13k0-uhmb",
+        "outputId": "b2081c51-3a4f-4702-ee80-db83396e072f"
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Predictions: [0 0 0 1]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "9. Write a Program to demonstrate the usage of a Hebbian Network."
+      ],
+      "metadata": {
+        "id": "azFkyC4WwW3x"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "\n",
+        "class HebbianNetwork:\n",
+        "    def __init__(self, learning_rate=0.1):\n",
+        "        self.learning_rate = learning_rate\n",
+        "        self.weights = None\n",
+        "\n",
+        "    def fit(self, X):\n",
+        "        n_samples, n_features = X.shape\n",
+        "        self.weights = np.zeros((n_features, n_features))\n",
+        "\n",
+        "        for i in range(n_samples):\n",
+        "            self.weights += self.learning_rate * np.outer(X[i], X[i])\n",
+        "\n",
+        "    def predict(self, x):\n",
+        "        return np.dot(x, self.weights)\n",
+        "\n",
+        "# Sample data (patterns)\n",
+        "X = np.array([[1, 1, 0, 0],\n",
+        "              [0, 0, 1, 1]])\n",
+        "\n",
+        "# Create and train the Hebbian network\n",
+        "hebbian_network = HebbianNetwork()\n",
+        "hebbian_network.fit(X)\n",
+        "\n",
+        "# Test with a noisy pattern\n",
+        "test_pattern = np.array([1, 0, 0, 0])  # Noisy version of the first pattern\n",
+        "predicted_pattern = hebbian_network.predict(test_pattern)\n",
+        "\n",
+        "print(\"Predicted Pattern:\", predicted_pattern)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "2RHZRcUfwYo9",
+        "outputId": "501493f9-c03b-4a6d-8b08-7a9f3e9cfc49"
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Predicted Pattern: [0.1 0.1 0.  0. ]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "10. write a program to implement feed forward neural network and feed backward neural network."
+      ],
+      "metadata": {
+        "id": "LsudHeVqxD2E"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "\n",
+        "class NeuralNetwork:\n",
+        "    def __init__(self, input_size, hidden_size, output_size):\n",
+        "        self.input_size = input_size\n",
+        "        self.hidden_size = hidden_size\n",
+        "        self.output_size = output_size\n",
+        "\n",
+        "        # Initialize weights and biases\n",
+        "        self.weights_input_hidden = np.random.randn(self.input_size, self.hidden_size)\n",
+        "        self.bias_hidden = np.zeros((1, self.hidden_size))\n",
+        "        self.weights_hidden_output = np.random.randn(self.hidden_size, self.output_size)\n",
+        "        self.bias_output = np.zeros((1, self.output_size))\n",
+        "\n",
+        "    def sigmoid(self, x):\n",
+        "        return 1 / (1 + np.exp(-x))\n",
+        "\n",
+        "    def sigmoid_derivative(self, x):\n",
+        "        return x * (1 - x)\n",
+        "\n",
+        "    def forward(self, X):\n",
+        "        # Forward propagation\n",
+        "        self.hidden_layer_input = np.dot(X, self.weights_input_hidden) + self.bias_hidden\n",
+        "        self.hidden_layer_output = self.sigmoid(self.hidden_layer_input)\n",
+        "        self.output_layer_input = np.dot(self.hidden_layer_output, self.weights_hidden_output) + self.bias_output\n",
+        "        self.output = self.sigmoid(self.output_layer_input)\n",
+        "        return self.output\n",
+        "\n",
+        "    def backward(self, X, y, learning_rate):\n",
+        "        # Backpropagation\n",
+        "        output_error = y - self.output\n",
+        "        output_delta = output_error * self.sigmoid_derivative(self.output)\n",
+        "\n",
+        "        hidden_error = output_delta.dot(self.weights_hidden_output.T)\n",
+        "        hidden_delta = hidden_error * self.sigmoid_derivative(self.hidden_layer_output)\n",
+        "\n",
+        "        # Update weights and biases\n",
+        "        self.weights_hidden_output += self.hidden_layer_output.T.dot(output_delta) * learning_rate\n",
+        "        self.bias_output += np.sum(output_delta, axis=0, keepdims=True) * learning_rate\n",
+        "        self.weights_input_hidden += X.T.dot(hidden_delta) * learning_rate\n",
+        "        self.bias_hidden += np.sum(hidden_delta, axis=0, keepdims=True) * learning_rate\n",
+        "\n",
+        "    def train(self, X, y, epochs, learning_rate):\n",
+        "        for epoch in range(epochs):\n",
+        "            self.forward(X)\n",
+        "            self.backward(X, y, learning_rate)\n",
+        "\n",
+        "# Example usage\n",
+        "X = np.array([[0, 0], [0, 1], [1, 0], [1, 1]])\n",
+        "y = np.array([[0], [1], [1], [0]])  # XOR gate logic\n",
+        "\n",
+        "nn = NeuralNetwork(input_size=2, hidden_size=2, output_size=1)\n",
+        "nn.train(X, y, epochs=10000, learning_rate=0.1)\n",
+        "\n",
+        "print(\"Predictions:\")\n",
+        "print(nn.forward(X))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Gt-zr3isxFRl",
+        "outputId": "89a07191-d453-49b5-80ed-ff757bc931a7"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Predictions:\n",
+            "[[0.04601573]\n",
+            " [0.95261932]\n",
+            " [0.49693565]\n",
+            " [0.50354957]]\n"
           ]
         }
       ]
